# mlx-vulkan

./: .gitignore  AGENTS.md  BF16_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  PLAN.md  PROJECT.md  RADIX_SORT_IMPLEMENTATION_REPORT.md  REFERENCES.md  TIMELINE.md  failed_ops.txt  failed_ops_analysis.md  failed_ops_grouped.txt  run_lldb.py  run_ops_individual.py  test_add_isolation.py  test_astype_isolation.py
.github/workflows/: vulkan.yml
.serena/: project.yml
mlx-src/: CMakeLists.txt  check_bindings.py  check_logical_not.cpp  check_segfault.cpp  check_vceq.cpp  diff.txt  failed_ops.txt  fix_shaders.py  fn.mlxfn  patch_not.py  repro.cpp  repro_export.py  run_dbg.sh  run_dbg2.sh  run_dbg_test.sh  run_lldb.sh  setup.py  sim_take.py  test_all.py  test_arg_manual.py  test_arg_manual_2.py  test_arg_manual_3.py  test_bf16.py  test_bf16_binary.py  test_bf16_matmul.py  test_bf16_norm.py  test_bf16_reduce.py  test_bf16_unary.py  test_byte_dump.py  test_compile_advanced.py  test_complex.py  test_constexpr.cpp  test_coop.comp  test_coop.py  test_cpp.cpp  test_cpu_fall.py  test_device.py  test_dump.py  test_empty.py  test_empty_cpu.py  (+65 more)
mlx-src/build_vulkan_dbg/: CMakeCache.txt  MLXConfigVersion.cmake  Makefile  cmake_install.cmake  compile_commands.json
mlx-src/build_vulkan_dbg/mlx/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/backend/common/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/backend/cpu/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/backend/gpu/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/backend/vulkan/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/distributed/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/distributed/jaccl/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/distributed/mpi/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/distributed/nccl/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/distributed/ring/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/mlx/io/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg/python/src/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
mlx-src/build_vulkan_dbg311/mlx/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/backend/common/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/backend/cpu/: Makefile  cmake_install.cmake  compiled_preamble.cpp
mlx-src/build_vulkan_dbg311/mlx/backend/gpu/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/backend/vulkan/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/distributed/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/distributed/jaccl/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/distributed/mpi/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/distributed/nccl/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/mlx/io/: Makefile  cmake_install.cmake
mlx-src/build_vulkan_dbg311/python/src/: Makefile  cmake_install.cmake
mlx-src/mlx/: CMakeLists.txt  allocator.cpp  allocator.h  array.cpp  array.h  compile.cpp  export.cpp  fast.cpp  fast_primitives.h  linalg.cpp  ops.cpp  primitives.cpp  primitives.h  scheduler.cpp  transforms.cpp  utils.cpp
mlx-src/mlx/backend/common/: binary.h  broadcasting.cpp  common.cpp  compiled.cpp  load.cpp  unary.h  utils.h
mlx-src/mlx/backend/cpu/: binary.h  binary_ops.h  compiled.cpp  encoder.cpp  encoder.h  eval.cpp  indexing.cpp  luf.cpp  matmul.cpp  primitives.cpp  scan.cpp  sort.cpp  unary.cpp  unary.h  unary_ops.h
mlx-src/mlx/backend/no_gpu/: primitives.cpp
mlx-src/mlx/backend/vulkan/: CMakeLists.txt  allocator.cpp  allocator.h  compiled.cpp  copy.cpp  device.cpp  device.h  device_info.cpp  eval.cpp  event.cpp  event.h  fence.cpp  fft.cpp  primitives.cpp  slicing.cpp  test_logical_not.cpp  utils.cpp  utils.h
mlx-src/mlx/backend/vulkan/kernels/: arange.comp  arg_reduce.comp  bf16.glsl  binary.comp  binary_two.comp  block_masked_mm.comp  conv.comp  conv1d.comp  copy.comp  defines.glsl  fft.comp  gather_mm.comp  hadamard.comp  indexing.comp  logsumexp.comp  matmul.comp  normalization.comp  quantized.comp  quantized_qmv.comp  quantized_qmv_medium.comp  radix_sort.comp  random.comp  rbits.comp  reduce.comp  rope.comp  scan.comp  sdpa_vector.comp  softmax.comp  sort.comp  ternary.comp  unary.comp
mlx-src/mlx/io/: gguf.cpp  gguf_quants.cpp  load.cpp  safetensors.cpp
mlx-src/python/mlx/core_stubs/: __init__.pyi
mlx-src/python/mlx/nn/: losses.py
mlx-src/python/src/: CMakeLists.txt  array.cpp  buffer.h  convert.cpp  device.cpp  dummy_ptr.cpp  indexing.cpp  mlx.cpp  ops.cpp  transforms.cpp  trees.cpp  trees.h  utils.cpp
mlx-src/python/tests/: mlx_tests.py  sitecustomize.py  test_export_import.py  test_fast.py  test_quantized.py
mlx-src/tests/: CMakeLists.txt  test_gather_cpu.cpp  test_unary.cpp  test_vulkan_alloc.cpp
notebooks/: nvidia_colab_smoke.ipynb
tests/vulkan/: google_colab_nvidia_smoke.sh  run_all_stages.sh  test_compile_fallback_policy.py  test_compile_logging.py  test_conv1d_gpu.py  test_indexing_gpu.py  test_lora_smoke.py  test_quantized_gpu.py  test_radix_sort.py  test_rope_gpu.py  test_sdpa_gpu.py  test_slice_update_gpu.py  test_stage10_reduce.py  test_stage11_matmul.py  test_stage12_nn_ops.py  test_stage13_indexing.py  test_stage14_sort.py  test_stage15_scan.py  test_stage16_nn_extended.py  test_stage17_addmm_conv_rbits.py  test_stage17_fft.py  test_stage18_concat.py  test_stage19_quantized.py  test_stage1_device.sh  test_stage20_linalg.py  test_stage21_advanced_mm.py  test_stage22_sync.py  test_stage23_shape_misc.py  test_stage24_qqmatmul.py  test_stage24_subgroup.py  test_stage25_amd_bringup.py  test_stage25_linux_vulkan_bringup.py  test_stage2_build.sh  test_stage3_shaders.sh  test_stage3a_allocator.py  test_stage4_unified_mem.py  test_stage5_workgroup_tune.py  test_stage6_mlx_cpu.py  test_stage7_gpu_copy.py  test_stage8_unary.py  (+6 more)
(+8 files in other folders)
